--- a/Bibliography.tex
+++ b/Bibliography.tex
@@ -49,6 +49,9 @@
 	 	\bibitem{godel}
 	 	 Gödel, K. "Über Formal Unentscheidbare Sätze der Principia Mathematica und Verwandter Systeme, I." Monatshefte für Math. u. Physik 38, 173-198, 1931. 
 	 	 
+	 	\bibitem{Prichard}
+	 	Prichard, H.A., 1950. Knowledge and Perception, Oxford: Clarendon Press.
+	 	
 	 	\bibitem{modal} Blackburn, P.; de Rijke, M.; Venema, Y. Modal Logic. Cambridge University Press. New York, 2001.
 	 	\bibitem{PAL} Baltag, A.; Moss, L.; Solecki, S. "The logic of public announcements, common knowledge, and private suspicions." Readings in Formal Epistemology. Springer International Publishing, 2016. 773-812.
 	 	\bibitem{RAK} Fagin, R.; Halpern J.; Moses, Y.; Vardi, M. Reasoning about knowledge. MIT press, 2004.
