--- a/Chapter_03.tex
+++ b/Chapter_03.tex
@@ -400,11 +400,11 @@ Denying (1) denies that knowledge is closed under logical entailment, and denyin
 
 A theory of justification is internalist if it holds that the believer is justified in believing some proposition $\varphi$ if and only if she has awareness or access to the basis for believing $\varphi$. Externalist theories deny this, and hold that external facts, \emph{e.g.} the causal process that produced the belief, are what justify beliefs and produce knowledge. Theories of justification sometimes apply to both knowledge and justified belief, and sometimes to just one or the other.
 
-An example internalist view is that, through reflection, one can know that she knows a propostion, and know that she believes but does not know a proposition~\cite{Prichard}. This corresponds to including both introspection axioms for the knowledge operator. A weaker internalist view that we endorse is \emph{evidentialism}, which holds that a belief is justified if and only if the believer has evidence supporting the belief. The task of an \emph{evidentialist} theory is to spell out what evidence is.
+An example internalist view due to Prichard	 is that, through reflection, one can know that she knows a propostion, and know that she believes but does not know a proposition~\cite{Prichard}. This corresponds to including both introspection axioms for the knowledge operator. A weaker internalist view that we endorse is \emph{evidentialism}, which holds that a belief is justified if and only if the believer has evidence supporting the belief. The task of an \emph{evidentialist} theory is to spell out what evidence is.
 
 An example externalist position is that the process that produced the belief that $\varphi$ be a \emph{reliable} one, in some sense to be defined by a given \emph{reliablist} theory. This avoids the problem of skepticism by placing the justification relation between the world and the knowledge of the agent, with or without the agent's awareness of this justification being present. Thus, if $\varphi$ is true, and $i$'s belief that $\varphi$ is produced by a reliable process in the real world, then $i$ knows that $\varphi$ and therefore knows that the \emph{skeptical hypothesis} is false, because inferring that from their being inconsistent is also a reliable process. This approach clearly rejects both positive and negative introspection axioms, as introspection plays no role in the justification of knowledge.
 
-The problem for an epistemic logician constructing a formal theory is to select an appropriate target for formalization. Most recent work avoids this problem by instead focusing on technical innovations applied to toy problems. We deny ourselves that route, and in doing so much make decisions regarding the above problems in a way that we can philosophically defend.
+The problem for an epistemic logician constructing a formal theory is to select an appropriate target for formalization. Most recent work avoids this problem by instead focusing on technical innovations applied to toy problems. We deny ourselves that route, and in doing so make decisions regarding the above problems in a way that we can philosophically defend.
 %The positive introspection axiom destroys almost all knowledge through the application of its contrapositive, $\tlnot \Kns{i}\Kns{i}\varphi \iimplies \tlnot \Kns{i}\varphi$. Thus, if strong internalism about knowledge is true, then knowledge is extremely rare. Knowing that one knows a proposition $\varphi$ amounts to satisfying all the conditions of knowledge with respect to the proposition that one knows $\varphi$. This means that in addition to satisfying all the conditions of knowledge with respect to $\varphi$, including the external conditions of justification, one must also be in a position to know that those external conditions are in fact satisfied. On a causal theory of justification, this amounts to knowing, actually \emph{knowing}, the exact causal process that produced your knowledge, and that this is a justifying causal process. An internalist theory of knowledge suffers from an infinite regress about the condition that known propositions be true. With the positive introspection axiom, $\Kns{i}\varphi$ only if $\Kns{i}\Kns{i}\varphi$, and $\Kns{i}\Kns{i}\varphi$ only if $\Kns{i}\Kns{i}\Kns{i}\varphi$, etc. At each layer, even for an internalist theory of knowledge, there is one externalist condition of knowledge, namely that the known proposition actually be true of the world. This amounts to knowing things in the object language about the metalanguage semantics, creating an infinitely high semantic tower that must be known in order for one atomic proposition to be known. The demands on knowledge are exceedingly high. Therefore, externalist positions about knowledge ought to, and frequently do, abandon the positive introspection requirement.
 
 %\subparagraph{Open World Property}
@@ -422,9 +422,9 @@ The problem for an epistemic logician constructing a formal theory is to select 
 %\end{enumerate}
 
 
+\subparagraph{Moore's Paradox}
 
-
-As with Hintikka's work, the test of an epistemic logic's adequacy is its ability to correctly handle touchstone cases from the philosophical literature, or better yet, to adequately explain problems that currently lack convincing explanations. For example, the so-called Moore's sentence is a problem pervasive in epistemology and the philosophy of language, attributed to G.E. Moore~\cite{Moore} by Wittgenstein~\cite{Wittgenstein}. The standard Moore's paradox to be solved is a statement of the form,
+As with Hintikka's work, another test of an epistemic logic's adequacy is its ability to correctly handle touchstone cases from the philosophical literature, or better yet, to adequately explain problems that currently lack convincing explanations. For example, the so-called Moore's sentence is a problem pervasive in epistemology and the philosophy of language, attributed to G.E. Moore~\cite{Moore} by Wittgenstein~\cite{Wittgenstein}. The standard Moore's paradox to be solved is a statement of the form,
 \begin{center}
 	\emph{$\varphi$, but I don't believe that $\varphi$.}
 \end{center}
@@ -438,7 +438,7 @@ This is justified by the principle that people normally believe what they assert
 
 \paragraph{3. Formal Properties}
 
-A system of logic ought to be sound and complete. An epistemic logic with both belief and knowledge operators must avoid an equivalence collapse of the knowledge and belief operator, which can occur if one is not careful in choosing axioms. However, the logic must satisfy the intuition that for $v$ to be epistemically possible from $w$, $v$ and $w$ should in some sense be indistinguishable to the agent. Finally, for a logic of sufficient expressive power, namely one with agents who can reason about their own reasoning, it must avoid a special obstacle to an agent trusting its own conclusion, dubbed the L\"obian Obstacle by researchers in the foundations of artificial intelligence. Modal logics with reflective reasoners must address this obstacle. 
+A system of logic ought to be sound and complete. An epistemic logic with both belief and knowledge operators must avoid an equivalence collapse of the knowledge and belief operator, which can occur if one is not careful in choosing axioms. However, the logic must satisfy the intuition that for $v$ to be epistemically possible from $w$, $v$ and $w$ should in some sense be indistinguishable to the agent. Finally, for a logic of sufficient expressive power, namely one with agents who can reason about their own reasoning, it must avoid a special obstacle to an agent trusting its own conclusion, dubbed the L\"obian Obstacle by researchers in the foundations of artificial intelligence. Modal logics with reflective reasoners must address this obstacle. We hold off on discussing this desideratum until Chapter \ref{CH_05}.
 
 \subparagraph{Soundness and Completeness}
 Soundness and completeness are familiar properties for students of logic. They are briefly mentioned here as a reminder.
@@ -558,9 +558,9 @@ In the case of false beliefs, suppose Bob is an early bird in 1948 America, and 
  Thus, we have provided an interpretation of the possibility relations underlying knowledge and belief, which is not often done in the literature. We now present our theory's notion of justification and its response to skepticism.
  
  \subsection{Justification}\label{sec:just}
- Justification in our logic is not represented explicitly with a justification operator, as in Artemov and Nogina \cite{ArtemovNogina}. There, they formalize justification and knowledge with a formula like $t:\varphi$, where $t$ is a justification (a proof-like object) for $\varphi$ polynomial in its length. They adopt $\mathcal{S}4$ as the static base epistemic logic, and interpret knowledge in the usual implicit or subjunctive way. They include a connective axiom schema $t:\varphi \iimplies \Kns{}\varphi$, read ``if $\varphi$ is justified then $\varphi$ is knowable". We seek a weaker notion of justification here, under the notion that false propositions can nonetheless be justified by evidence. Rather than representing justification explicitly in the object language, we bury it in the underlying model theory, relating evidence to the possibility relations over worlds. We capture the notion of justification in the object language with the axiom schema \emph{dence in Belief}.
+ Justification in our logic is not represented explicitly with a justification operator, as in Artemov and Nogina \cite{ArtemovNogina}. There, they formalize justification and knowledge with a formula like $t:\varphi$, where $t$ is a justification (a proof-like object) for $\varphi$ polynomial in its length. They adopt $\mathcal{S}4$ as the static base epistemic logic, and interpret knowledge in the usual implicit or subjunctive way. They include a connective axiom schema $t:\varphi \iimplies \Kns{}\varphi$, read ``if $\varphi$ is justified then $\varphi$ is knowable". We seek a weaker notion of justification here, under the notion that false propositions can nonetheless be justified by evidence. Rather than representing justification explicitly in the object language, we bury it in the underlying model theory, relating evidence to the possibility relations over worlds. We capture the notion of justification in the object language with the axiom schema \emph{Evidential Restraint}.
  
-Recall \emph{Evidential Restraint}: $\Bels{i}\varphi \iimplies \Bels{i}\Kns{i}\varphi$. An agent believes $\varphi$ only if \emph{her reflection} on all the objectively available evidence yields only possible worlds where $\varphi$ is true. It places a constraint on the beliefs agents form such that they have direct awareness of solid evidence for the proposition. Yet they can still be mistaken, because it is their reflection on the evidence that supports the proposition, not the objectively available evidence itself. Unpacking this, we accomplish several desiderata simultaneously. First, we make a normative idealizing assumption about agents, that all their beliefs are constrained by subjectively available evidence. Second, we capture an internalist theory of justification, where an agent's belief is justified by the evidence available to her\footnote{The specific internalist theory we adopt is called evidentialism; cf Feldman and Conee in \cite{evidentialism}.}. This theory is philosophically defensible, even if it is not unanimously held (few philosphical positions are). Finally, the distinction this theory draws between objective and subject perspectives helps account for powerful intuitions about knowledge.
+Recall \emph{Evidential Restraint}: $\Bels{i}\varphi \iimplies \Bels{i}\Kns{i}\varphi$. An agent believes $\varphi$ only if \emph{her reflection} on all the objectively available evidence yields only possible worlds where $\varphi$ is true. It places a constraint on the beliefs agents form such that they have direct awareness of solid evidence for the proposition. Yet they can still be mistaken, because it is their reflection on the evidence that supports the proposition, not the objectively available evidence itself. Unpacking this, we accomplish several desiderata simultaneously. First, we make a normative idealizing assumption about agents, that all their beliefs are constrained by subjectively available evidence. Second, we capture an internalist theory of justification, where an agent's belief is justified by the evidence available to her\footnote{The specific internalist theory we adopt is called evidentialism; cf Feldman and Conee in \cite{evidentialism}.}. This theory is philosophically defensible, even if it is not unanimously held (few philosphical positions are). The species of internalism we endorse, evidentialism, can be adopted as a coherentist version or a foundationalist version, and we are happy to adopt the foundationalist version, where perceptual seemings and beliefs about evidence can serve as justifiers of beliefs. Finally, the distinction this theory draws between objective and subject perspectives helps account for powerful intuitions about knowledge.
 
 As a balance between the normative and descriptive, this theory achieves a plausible and desireable trade off. If an agent forms a belief that $\varphi$ while having defeating evidence directly accessible to her, we are right to criticize her for forming and continuing to hold the belief. This follows the tradition set by Hintikka that the intuitive standard for evaluating formulas of epistemic logic is rational defensibility. On this ground, the axiom is intuitively plausible as a normative claim. 
 
@@ -589,7 +589,7 @@ These sets formalize the notion that a human-like agent can actively consider on
 
 Now we can ameliorate the problem of skepticism by appealing to our notion of evidence as the source of possible worlds, and the fact that models include only active atomic propositions. For logic and mathematics, evidence consists in proofs. A proof is a set of sentences realizing the sequence of deductions from axioms and theorems to the proved theorem. A proof is tokenized when it is instantiated in the form of writing, speech, or via mechanization software. We say a tokenized proof constitutes objectively available evidence for a theorem, and perceiving that tokenized proof constitutes subjectively available evidence. Thus, even though there may be a Platonic proof that P!=NP out there waiting to be instantiated, until it is instantiated, no such objective evidence is available to human-like reasoners. That's why humans truly and without contradiction say that they do not know whether P=NP.
 
-Furthermore, we can deny the problematic part of the problem of logical omniscience by denying that agents know all tautological logical implications. They know the ones with tokenized proofs. The ones without tokenized proofs are actually unknown to us. In order to identify an inconsistency, a critic would have to instantiate a proof of a previously unknown theorem, and in so doing, the logic under consideration here would update to include it as objectively available evidence for formulas consisting of atomic propositions that are active. 
+Furthermore, we can deny the problematic part of the problem of logical omniscience by denying that agents know all tautological logical implications. They know the ones with tokenized proofs. The ones without tokenized proofs are actually unknown to us. In order to identify an inconsistency, a critic would have to instantiate a proof of a previously unknown theorem, and in so doing, the logic under consideration here would update to include it as objectively available evidence for formulas consisting of atomic propositions that are active. We do not formalize these ideas in this thesis, but leave it for future work to flesh out.
 
 \section{Indistinguishibility Satisfied}\label{sec:indist}
 
